--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 <body>
 
   <!-- Challenge 1: Wrap the text below with a link that has an absolute path -->
-  <a >Absolute Path (external link)</a>
+  <a href="www.google.com">Absolute Path (external link)</a>
 
   <!-- Challenge 2: Wrap the text below with a link that has a relative path to about.html-->
   <a href="./about.html">Relative Path (internal link)</a>
 
   <!-- Challenge 3: Wrap the img tag below with a link that uses the target attribute -->
-  <a ><img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="a lion"></a>
+  <a href="www.google.com"><img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="a lion"></a>
 
 </body>
 </html>
